--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@
     --cor-fundo-principal: #3a2e4d;
     --cor-fundo-secundario: #574a70;
     --cor-texto-principal: #F8F9FA;
-    --cor-texto-secundario: #d4d0de;
-    --cor-borda-destaque: #c3a8dc;
+    --cor-texto-secundario: #ffffff;
+    --cor-borda-destaque: #a16cd3;
     --cor-acao-principal: #9666cc;
 
     --fonte-corpo: 'Open Sans', sans-serif;
